--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,7 @@ set -g @tpm_plugins '              \
 
 run-shell '~/.tmux/plugins/tpm/tpm'
 
+set-option -g history-limit 100000
 set-option -g mouse on
 set-option -g status-position top
 set-option -g status-right '#(wifi) #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
