--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,11 +11,11 @@ run-shell '~/.tmux/plugins/tpm/tpm'
 
 set-option -g history-limit 100000
 
-#set-option -g mouse on
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
-set-option -g mouse-resize-pane on
-set-option -g mode-mouse on
+set-option -g mouse on
+#set-option -g mouse-select-pane on
+#set-option -g mouse-select-window on
+#set-option -g mouse-resize-pane on
+#set-option -g mode-mouse on
 
 set-option -g status-position top
 set-option -g status-right '#(wifi) #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
