bindkey(zshrc/tmux)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,3 +19,5 @@ set-option -g mouse on
 
 set-option -g status-position top
 set-option -g status-right '#(wifi) #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
+set-option -g default-shell /usr/local/bin/zsh
+bind-key S set-window-option synchronize-panes
