--- a/vim/dein_lazy.toml
+++ b/vim/dein_lazy.toml
@@ -1,9 +1,11 @@
 # dein_lazy.toml
 
+# スニペット系
+
 [[plugins]]
 repo = 'Shougo/deoplete.nvim'
 hook_source = '''  
-  let g:python3_host_prog = '/usr/local/bin/python3'
+  let g:python3_host_prog = '~/.pyenv/shims/python'
   let g:deoplete#enable_at_startup = 1
   inoremap <expr><tab> pumvisible() ? "\<C-n>" :
         \ neosnippet#expandable_or_jumpable() ?
@@ -25,3 +27,51 @@ on_i  = 1
 on_ft = ['snippet']
 depends = ['neosnippet-snippets']
 
+
+[[plugins]]
+# HTMLやCSSの構文を簡単に記述できる
+repo = 'mattn/emmet-vim'
+on_ft = ['html']
+
+[[plugins]]
+# HTML5のシンタックスハイライト
+repo = 'othree/html5.vim'
+on_ft = ['html']
+
+[[plugins]]
+# CSSの色を表示
+repo = 'ap/vim-css-color'
+on_ft = ['css', 'less', 'sass']
+
+[[plugins]]
+repo = 'hail2u/vim-css3-syntax'
+on_ft = ['css', 'less', 'sass']
+
+[[plugins]]
+# JavaScriptのインデンテーション
+repo = 'pangloss/vim-javascript'
+on_ft = ['javascript']
+
+[[plugins]]
+# Pug(旧Jade)のシンタックスハイライトとインデンテーション
+repo = 'digitaltoad/vim-pug'
+on_ft = ['pug', 'jade']
+
+[[plugins]]
+# Markdownのシンタックスハイライト
+repo = 'rcmdnk/vim-markdown'
+on_ft = ['markdown']
+hook_source = ''' " {{{
+    " 自動で折りたたまないようにする
+    let g:vim_markdown_folding_disabled = 1
+''' # }}}
+
+[[plugins]]
+# Markdownのプレビュー
+repo = 'kannokanno/previm'
+depends = ['open-browser.vim']
+on_ft = ['markdown']
+hook_source = ''' " {{{
+    " リアルタイムプレビューを有効化
+    let g:previm_enable_realtime = 1
+''' # }}}
